--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,6 @@
         ]
       }
     ],
-    "ignore": [ "firebase.json", "/.*", "/node_modules/" ]
+    "ignore": [ "firebase.json", "/.*", "/node_modules/", "/public/node_modules/" ]
   }
 }
